--- a/index.html
+++ b/index.html
@@ -586,7 +586,127 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-subscr">
+          <p class="subscr-text">Subscribe</p>
+          <form class="subscr-form">
+            <label class="subscr-lable">
+              <input
+                class="subscr-input"
+                type="email"
+                name="footer-email"
+                placeholder="E-mail"
+              />
+            </label>
+            <button class="subscr-btn" type="submit">
+              Subscribe
+              <svg class="subscr-icon" width="24" height="24">
+                <use href="./images/icons.svg/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
+    <!-- ================ Modal================-->
+    <div class="modal">
+      <div class="modal-window">
+        <button class="modal-btn-cross" type="button">
+          <svg class="modal-icon-cross" width="8" height="8">
+            <use href="./images/icons.svg/sprite.svg#icon-cross"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <div class="wrapper-input">
+            <label class="modal-label" for="user-name">Name</label>
+            <div class="modal-input">
+              <input
+                class="input"
+                id="user-name"
+                type="text"
+                name="user-name"
+                required
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg/sprite.svg#icon-avatar"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="wrapper-input">
+            <label class="modal-label" for="user-phone">Phone</label>
+            <div class="modal-input">
+              <input
+                class="input"
+                id="user-phone"
+                type="tel"
+                name="user-phone"
+                required
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg/sprite.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="wrapper-input">
+            <label class="modal-label" for="user-email">Email</label>
+            <div class="modal-input">
+              <input
+                class="input"
+                id="user-email"
+                type="email"
+                name="user-email"
+                required
+              />
+              <svg class="label-icon" width="18" height="24">
+                <use href="./images/icons.svg/sprite.svg#icon-envelope"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-comment">
+            <label class="modal-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-textarea"
+              id="user-comment"
+              name="user-comment"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="wrapper-checkbox">
+            <input
+              class="visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
+              required
+            />
+            <label class="checkbox-label" for="user-privacy">
+              <span class="policy-chackbox">
+                <svg class="chackbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg/sprite.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of
+              <a
+                class="checkbox-link"
+                href="#"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+
+          <button class="btn-submit" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
