--- a/index.html
+++ b/index.html
@@ -691,9 +691,8 @@
               <span class="policy-chackbox">
                 <svg class="chackbox-icon" width="10" height="8">
                   <use href="./images/icons.svg/sprite.svg#icon-check"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of
+                </svg> </span
+              >I accept the terms and conditions of
               <a
                 class="checkbox-link"
                 href="#"
