--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </footer>
 
     <!-- ================ Modal================-->
-    <div class="modal is-open">
+    <div class="modal is-hidden">
       <div class="modal-window">
         <button class="modal-btn-cross" type="button">
           <svg class="modal-icon-cross" width="8" height="8">
@@ -689,7 +689,7 @@
             />
             <label class="checkbox-label" for="user-privacy">
               <span class="policy-chackbox">
-                <svg class="chackbox-icon" width="10" height="8">
+                <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg/sprite.svg#icon-check"></use>
                 </svg> </span
               >I accept the terms and conditions of
