--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     </footer>
 
     <!-- ================ Modal================-->
-    <div class="modal is-hidden">
+    <div class="modal is-open">
       <div class="modal-window">
         <button class="modal-btn-cross" type="button">
           <svg class="modal-icon-cross" width="8" height="8">
