--- a/index.html
+++ b/index.html
@@ -688,11 +688,11 @@
               required
             />
             <label class="checkbox-label" for="user-privacy">
-              <span class="policy-chackbox">
+              <span class="policy-checkbox">
                 <svg class="checkbox-icon" width="10" height="8">
                   <use href="./images/icons.svg/sprite.svg#icon-check"></use>
                 </svg> </span
-              >I accept the terms and conditions of
+              >I accept the terms and conditions of the
               <a
                 class="checkbox-link"
                 href="#"
@@ -702,7 +702,6 @@
               >
             </label>
           </div>
-
           <button class="btn-submit" type="submit">Send</button>
         </form>
       </div>
