--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
               <div class="img-box">
                 <img
                   src="./images/bapp.jpg"
+                  srcset="./images/bapp@1x.jpg 1x, ./images/bapp@2x.jpg 2x"
                   alt="Banking App"
                   width="360"
                   height="300"
@@ -421,6 +422,10 @@
               <div class="img-box">
                 <img
                   src="./images/payment.jpg"
+                  srcset="
+                    ./images/payment@1x.jpg 1x,
+                    ./images/payment@2x.jpg 2x
+                  "
                   alt="Cashless Payment"
                   width="360"
                   height="300"
